tests/parser/bad/exps/exp_t-builtin-with.scilexp
let one = Uint128 1 in
(* should be add *)
builtin (+) one one
